--- a/sgim/templates/inventario/reportes/listado.html
+++ b/sgim/templates/inventario/reportes/listado.html
@@ -50,4 +50,14 @@
 	</tbody>
 </table>
 
+
+<div id="myStat" data-dimension="250" data-text="35%" data-info="New Clients" data-width="30" data-fontsize="38" data-percent="35" data-fgcolor="#61a9dc" data-bgcolor="#eee" data-fill="#ddd" data-total="200" data-part="35" data-icon="long-arrow-up" data-icon-size="28" data-icon-color="#fff"></div>
+<script>
+	$(document).ready(function() {
+		   $('#myStat').circliful();
+		   console.log("sfsf")
+	});
+
+
+</script>
 {% endblock contenido %}
