Se agragego Graficos con hightcharts

--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -80,7 +80,7 @@
                     },
                     {
                         "id":"fb_device",
-                        "url":"http://www.example.com",
+                        "url":"/inventario/dispositivos/agregar/",
                         "bgcolor":"#2196F3",
                         "color":"white",
                         "icon":"<i class='icon ion-ios-monitor'></i>"
