--- a/sgim/templates/gestion/host_details.html
+++ b/sgim/templates/gestion/host_details.html
@@ -42,7 +42,7 @@
 <script type="text/javascript" src="{{BOWER_URL}}highcharts/highcharts.js"></script>
 <script type="text/javascript" src="{{BOWER_URL}}highcharts/highcharts-more.js"></script>
 <script type="text/javascript" src="{{BOWER_URL}}highcharts/modules/solid-gauge.js"></script>
-
+ <script type="text/javascript" src="{{BOWER_URL}}moment/min/moment.min.js"></script>
 
 {% endblock include_statics %}
 
@@ -320,7 +320,9 @@
 							<div id="jqxgridProcesses"></div>
 			            </div>
 			            <div class="container-fluid">
-							gfdg
+							<div id="ram_hist" style="width: 65%;margin-top:8px"></div>
+							<div id="load_hist" style="width: 65%;margin-top:8px"></div>
+							<div id="disk_hist" style="width: 65%;margin-top:8px"></div>
 			            </div>
       
 			        </div>   
@@ -700,10 +702,297 @@
 	});
 
 		
+Highcharts.setOptions({
+            global: {
+                useUTC: false
+            },
+            lang: {
+                months: ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio',  'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],
+                shortMonths: [ "Ene" , "Feb" , "Mar" , "Abr" , "May" , "Jun" , "Jul" , "Ago" , "Sep" , "Oct" , "Nov" , "Dic"],
+                //weekdays: ['Domingo', 'Lunes', 'Martes', 'Miercoles', 'Jueves', 'Viernes', 'Sabado'],
+                downloadJPEG: "Descargar como JPG",
+                printChart:"Imprimir Grafico",
+                weekdays: ["Domingo", "Lunes", "Martes", "Miercoles", "Jueves", "Viernes", "Sabado"],
+                resetZoom:"Resetear zoom"
+            }
+        });
 
+	//**************************
+    $.ajax({
+    	url: '/api/gestion/hist_memory/?host={{host.id}}&min_date=03/06/2015',
+    	type: 'GET',
+         dataType: 'json',
+    })
+    .done(function(data) {
+    	total_items = data.length;
+        start_date = data[total_items-1].humanise_date
+        var day = moment(start_date);
+        mydate = Date.UTC(day.year(), day.month(),day.date(), day.hours(),day.minutes());
+        arrayData = []
+        for(i=0; i<total_items;i++){
+            var day = moment(data[i].humanise_date);
+            date = Date.UTC(day.year(), day.month(),day.date(), day.hours(),day.minutes());
+            arrayData.push( [ 
+                date, 
+                parseFloat(data[i].percent_ram_used) ]);
+        }        
+       
+
+	    $('#ram_hist').highcharts({
+	        chart: {
+	            zoomType: 'x'
+	        },
+	        title: {
+	            text: 'Historial de uso de Memoria RAM en los ultimos 15 dias'
+	        },
+	        subtitle: {
+	            text: document.ontouchstart === undefined ?
+	                    'Haga clic y arrastre en el área de trazado para hacer un zoom' :
+	                    'Pinch the chart to zoom in'
+	        },
+	        xAxis: {
+	            type: 'datetime',
+	            //minRange: 14 * 24 * 3600000 // fourteen days
+	        },
+	        yAxis: {
+	            title: {
+	                text: '% de uso'
+	            }           
+	        },
+	        tooltip: {
+	            xDateFormat: '%A, %d %B %Y, %H:%M:%S',
+	            shared: true,
+	            valueSuffix: ' %'
+	        },
+	        legend: {
+	            enabled: true
+	        },
+	        plotOptions: {
+	            area: {
+	                fillColor: {
+	                    linearGradient: { x1: 0, y1: 0, x2: 0, y2: 1},
+	                    stops: [
+	                        [0, Highcharts.getOptions().colors[0]],
+	                        [1, Highcharts.Color(Highcharts.getOptions().colors[0]).setOpacity(0.3).get('rgba')]
+	                    ]
+	                },
+	                marker: {
+	                    radius: 2
+	                },
+	                lineWidth: 1,
+	                states: {
+	                    hover: {
+	                        lineWidth: 1
+	                    }
+	                },
+	                threshold: null
+	            }
+	        },
+
+	        series: [{
+	            type: 'area',
+	            name: 'Uso de RAM',
+	            pointInterval:  60*1000,
+	            //pointStart: Date.UTC(2006, 0, 1),
+	            pointStart: mydate,
+	            data: arrayData
+	        }]
+    });
+
+
+    })
+    .fail(function() {
+    	console.log("error");
+    })   
+    
+  
+  	//**************************
+    $.ajax({
+    	url: '/api/gestion/hist_memory/?host={{host.id}}&min_date=03/06/2015',
+    	type: 'GET',
+         dataType: 'json',
+    })
+    .done(function(data) {
+    	total_items = data.length;
+        start_date = data[total_items-1].humanise_date
+        var day = moment(start_date);
+        mydate = Date.UTC(day.year(), day.month(),day.date(), day.hours(),day.minutes());
+        arrayData = []
+        for(i=0; i<total_items;i++){
+            var day = moment(data[i].humanise_date);
+            date = Date.UTC(day.year(), day.month(),day.date(), day.hours(),day.minutes());
+            arrayData.push( [ 
+                date, 
+                parseFloat(data[i].percent_ram_used) ]);
+        }        
+       
+               
+	    $('#load_hist').highcharts({
+	        chart: {
+	            zoomType: 'x'
+	        },
+	        title: {
+	            text: 'Historial de carga de procesador en los ultimos 15 dias'
+	        },
+	        subtitle: {
+	            text: document.ontouchstart === undefined ?
+	                    'Haga clic y arrastre en el área de trazado para hacer un zoom' :
+	                    'Pinch the chart to zoom in'
+	        },
+	        xAxis: {
+	            type: 'datetime',
+	            //minRange: 14 * 24 * 3600000 // fourteen days
+	        },
+	        yAxis: {
+	            title: {
+	                text: '% de uso'
+	            }           
+	        },
+	        tooltip: {
+	            xDateFormat: '%A, %d %B %Y, %H:%M:%S',
+	            shared: true,
+	            valueSuffix: ' %'
+	        },
+	        legend: {
+	            enabled: true
+	        },
+	        plotOptions: {
+	            area: {
+	                fillColor: {
+	                    linearGradient: { x1: 0, y1: 0, x2: 0, y2: 1},
+	                    stops: [
+	                        [0, Highcharts.getOptions().colors[0]],
+	                        [1, Highcharts.Color(Highcharts.getOptions().colors[0]).setOpacity(0.3).get('rgba')]
+	                    ]
+	                },
+	                marker: {
+	                    radius: 2
+	                },
+	                lineWidth: 1,
+	                states: {
+	                    hover: {
+	                        lineWidth: 1
+	                    }
+	                },
+	                threshold: null
+	            }
+	        },
+
+	        series: [{
+	            type: 'area',
+	            name: 'Uso de Procesador',
+	            pointInterval:  60*1000,
+	            //pointStart: Date.UTC(2006, 0, 1),
+	            pointStart: mydate,
+	            data: arrayData
+	        }]
+    });
+
+
+    })
+    .fail(function() {
+    	console.log("error");
+    })   
+    
+    	//**************************
+    $.ajax({
+    	url: '/api/gestion/hist_memory/?host={{host.id}}&min_date=03/06/2015',
+    	type: 'GET',
+         dataType: 'json',
+    })
+    .done(function(data) {
+    	total_items = data.length;
+        start_date = data[total_items-1].humanise_date
+        var day = moment(start_date);
+        mydate = Date.UTC(day.year(), day.month(),day.date(), day.hours(),day.minutes());
+        arrayData = []
+        for(i=0; i<total_items;i++){
+            var day = moment(data[i].humanise_date);
+            date = Date.UTC(day.year(), day.month(),day.date(), day.hours(),day.minutes());
+            arrayData.push( [ 
+                date, 
+                parseFloat(data[i].percent_ram_used) ]);
+        }        
+       
+               
+	    $('#disk_hist').highcharts({
+	        chart: {
+	            zoomType: 'x'
+	        },
+	        title: {
+	            text: 'Historial de uso de disco duro en los ultimos 15 dias'
+	        },
+	        subtitle: {
+	            text: document.ontouchstart === undefined ?
+	                    'Haga clic y arrastre en el área de trazado para hacer un zoom' :
+	                    'Pinch the chart to zoom in'
+	        },
+	        xAxis: {
+	            type: 'datetime',
+	            //minRange: 14 * 24 * 3600000 // fourteen days
+	        },
+	        yAxis: {
+	            title: {
+	                text: '% de uso'
+	            }           
+	        },
+	        tooltip: {
+	            xDateFormat: '%A, %d %B %Y, %H:%M:%S',
+	            shared: true,
+	            valueSuffix: ' %'
+	        },
+	        legend: {
+	            enabled: true
+	        },
+	        plotOptions: {
+	            area: {
+	                fillColor: {
+	                    linearGradient: { x1: 0, y1: 0, x2: 0, y2: 1},
+	                    stops: [
+	                        [0, Highcharts.getOptions().colors[0]],
+	                        [1, Highcharts.Color(Highcharts.getOptions().colors[0]).setOpacity(0.3).get('rgba')]
+	                    ]
+	                },
+	                marker: {
+	                    radius: 2
+	                },
+	                lineWidth: 1,
+	                states: {
+	                    hover: {
+	                        lineWidth: 1
+	                    }
+	                },
+	                threshold: null
+	            }
+	        },
+
+	        series: [{
+	            type: 'area',
+	            name: 'Uso de Disco',
+	            pointInterval:  60*1000,
+	            //pointStart: Date.UTC(2006, 0, 1),
+	            pointStart: mydate,
+	            data: arrayData
+	        },
+            {
+	            type: 'area',
+	            name: 'Uso de Disco 2',
+	            pointInterval:  60*1000,
+	            //pointStart: Date.UTC(2006, 0, 1),
+	            pointStart: mydate,
+                data: [22,44, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6, 2.5]
+                }
+            ]
+    });
+
+
+    })
+    .fail(function() {
+    	console.log("error");
+    })
 
 	
-	});
+});
 
 
 </script>
